fix share modal scrolling on mobile

--- a/less/app.less
+++ b/less/app.less
@@ -67,6 +67,10 @@ html {
 	}
 }
 
+.modal-open {
+	overflow: hidden;
+}
+
 .logo {
 	display: block;
 	position: absolute;
@@ -419,5 +423,8 @@ footer {
 		display: inline-block;
 		margin-right: 2rem;
 	}
+}
 
+.modal {
+	-webkit-overflow-scrolling: touch;
 }
